--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -1,11 +1,14 @@
 ---
-title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
+title: "Hardware design & evaluation of Multiagent Wireless Data Communication System for Precision Agriculture Applications."
 collection: talks
-type: "Conference proceedings talk"
+type: "Conference presentation"
 permalink: /talks/2014-03-01-talk-3
-venue: "Testing Institute of America 2014 Annual Conference"
-date: 2014-03-01
-location: "Los Angeles, CA"
+venue: "American Society of Biological & Agricultural Engineering (ASABE) Annual International Meeting (AIM),2022"
+date: 2022-07-10
+location: "Houston, Texas"
 ---
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
+As autonomous robotic platforms are becoming a norm in modern agricultural practices, there is a need to know the real time operational status of these platforms
+for their secure functioning as they are on their own. Hence there is a need to seamlessly communication all the data collected and gather it at a single location either locally or on remote computing platforms. Therefore, a wireless data communication platform was developed which consists of MESH radio along with a microcontroller that can be interfaced with these autonomous platforms to capture data from different subsystems and seamlessly transfer it to a single location. The MESH radio utilized has a physical 
+range of 40 miles (60 km) line of sigth, a maximum link rate of 276 kpbs, and many more advantages. The data gathered consists of location data and subsystem information.
+
