--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -8,5 +8,5 @@ date: 2022-11-15
 location: "Clearwater Beach, Florida"
 ---
 [More information here](https://www.aggateway.org/EventsandEducation/2022AnnualConference.aspx)
-
+A small team of harvest-aiding mobile robots (FRAIL-bots) is being designed to aid large teams of human pickers in commercial strawberry harvesting by providing them with empty containers and transporting containers filled with harvested crops to collection stations at the edge of a field. The collective operation of these robots can serve requests for point-to-point transport in real time. The goal is to improve pickers’ job cycle by dramatically reducing non-productive walking and unloading times. To do so, individual FRAIL-bots with limited amounts must be dispatched and routed dynamically, in order to optimally match the dynamic and stochastic spatiotemporal distribution of real-time transport requests and resolve any spatial and resource sharing conflicts in the field correspondingly.
 As autonomous robotic platforms are becoming a norm in modern agricultural practices, there is a need to know the real time operational status of these platforms for their secure functioning as they are on their own. Hence there is a need to seamlessly communication all the data collected and gather it at a single location either locally or on remote computing platforms. Therefore, a wireless data communication platform was developed which consists of MESH radio along with a microcontroller that can be interfaced with these autonomous platforms to capture data from different subsystems and seamlessly transfer it to a single location. The MESH radio utilized has a physical range of 40 miles (60 km) line of sigth, a maximum link rate of 276 kpbs, and many more advantages. The data gathered consists of location data and subsystem information. Further the information can be used with knowledge graphs and machine learning to produce valuable insights for the growers. This way, the data collected can be standardized for such kind of subsystems leading to control of many such networks at a time.
