--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -1,13 +1,13 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "Research Presentation at 3 Minute Thesis Competition,2022 held at Kansas State University"
 collection: talks
-type: "Tutorial"
+type: "Talk"
 permalink: /talks/2013-03-01-tutorial-1
-venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
-location: "Berkeley CA, USA"
+venue: "Kansas State University"
+date: March 2022
+location: "Kansas State University KS, USA"
 ---
 
-[More information here](http://exampleurl.com)
+[More information here](https://www.k-state.edu/media/newsreleases/2022-03/3mt-winners3722.html)
 
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+Represented the Department of Biological & Agricultural Engineering and College Of Engineering at the finals of the 3 Minute Thesis (3MT) Competition organized by the graduate school at Kansas State University, Manhattan, KS
