--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Wireless Data Communication for Precision Agriculture Applications"
 collection: talks
 type: "Talk"
 permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+venue: "Kansas State University"
+date: March 2022
+location: "Manhattan, Kansas"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+This talk was part of the K-GRAD (K-State Graduate Research, Arts, and Discovery) Forum, an annual showcase of K-State graduate student research, scholarly work, and discovery. This on-campus event allows graduate students from all disciplines to share their work with the K-State community and gain experience presenting their work in a professional setting. 
